# ephemeral

./: .gitignore  CMakeLists.txt  Makefile  README.md  build_windows.bat  help.md
cmake/modules/: FindASSIMP.cmake  FindGLFW3.cmake  FindGLM.cmake
include/ephemeral/: AudioManager.h  Camera.h  Direction.h  GameManager.h  InputManager.h  LevelLoader.h  Logger.h  Player.h  Settings.h  Shader.h  StaticLine.h  TextRender.h  Texture.h  TexturedSquare.h
include/ephemeral/objects/: Cube.h  GameObject.h
lib/: mpg123.lib  rtaudio.lib
resources/levels/: main.lvl
resources/shaders/: color.vs  line.fs  shader.vs
src/: main.cpp
src/ephemeral/: AudioManager.cpp  Camera.cpp  GameManager.cpp  InputManager.cpp  LevelLoader.cpp  Player.cpp  Shader.cpp  StaticLine.cpp  TextRender.cpp  Texture.cpp  TexturedSquare.cpp
src/ephemeral/objects/: Cube.cpp  GameObject.cpp
